trunk/Archive2/3e/1eb28cd423ee63/output
main.cpp: In function 'int main()':
main.cpp:91:12: error: no match for 'operator=' (operand types are 'Furrovine::detail::back_stack<float, 2ul>' and 'float')
     meow.x = 2.56f;
            ^
main.cpp:91:12: note: candidates are:
main.cpp:22:10: note: Furrovine::detail::back_stack<float, 2ul>& Furrovine::detail::back_stack<float, 2ul>::operator=(const Furrovine::detail::back_stack<float, 2ul>&)
   struct back_stack {
          ^
main.cpp:22:10: note:   no known conversion for argument 1 from 'float' to 'const Furrovine::detail::back_stack<float, 2ul>&'
main.cpp:22:10: note: Furrovine::detail::back_stack<float, 2ul>& Furrovine::detail::back_stack<float, 2ul>::operator=(Furrovine::detail::back_stack<float, 2ul>&&)
main.cpp:22:10: note:   no known conversion for argument 1 from 'float' to 'Furrovine::detail::back_stack<float, 2ul>&&'
main.cpp:92:12: error: no match for 'operator=' (operand types are 'Furrovine::detail::back_stack<float, 1ul>' and 'float')
     meow.y = 3.78f;
            ^
main.cpp:92:12: note: candidates are:
main.cpp:22:10: note: Furrovine::detail::back_stack<float, 1ul>& Furrovine::detail::back_stack<float, 1ul>::operator=(const Furrovine::detail::back_stack<float, 1ul>&)
   struct back_stack {
          ^
main.cpp:22:10: note:   no known conversion for argument 1 from 'float' to 'const Furrovine::detail::back_stack<float, 1ul>&'
main.cpp:22:10: note: Furrovine::detail::back_stack<float, 1ul>& Furrovine::detail::back_stack<float, 1ul>::operator=(Furrovine::detail::back_stack<float, 1ul>&&)
main.cpp:22:10: note:   no known conversion for argument 1 from 'float' to 'Furrovine::detail::back_stack<float, 1ul>&&'
